--- a/Curso_Introducao-Asp.Net-Core-SignalR_C/Views/Home/Pol.cshtml
+++ b/Curso_Introducao-Asp.Net-Core-SignalR_C/Views/Home/Pol.cshtml
@@ -34,6 +34,10 @@
         </div>
     </div>
 </div>
+
+@section Scripts
+{
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/polhub.js"></script>
+}
